flux/clusters/tokamak/policies/disallow-privileged.yaml
---
# Blocks containers that explicitly set privileged: true.
# Exceptions: kube-system (Cilium), spegel, longhorn-system.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
  annotations:
    policies.kyverno.io/severity: high
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: disallow-privileged
      match:
        any:
          - resources:
              kinds: [Pod]
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - spegel
                - longhorn-system
      validate:
        message: "Privileged containers are not allowed. Remove securityContext.privileged: true."
        pattern:
          spec:
            =(initContainers):
              - =(securityContext):
                  =(privileged): "false"
            =(ephemeralContainers):
              - =(securityContext):
                  =(privileged): "false"
            containers:
              - =(securityContext):
                  =(privileged): "false"
