flux/clusters/tokamak/policies/set-helm-max-history.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-helm-max-history
  annotations:
    policies.kyverno.io/severity: low
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: set-helm-max-history
      match:
        any:
          - resources:
              kinds: [HelmRelease]
      mutate:
        targets:
          - apiVersion: helm.toolkit.fluxcd.io/v2
            kind: HelmRelease
        patchStrategicMerge:
          spec:
            +(maxHistory): 3
