flux/clusters/tokamak/policies/set-revision-history-limit.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-revision-history-limit
  annotations:
    policies.kyverno.io/severity: low
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: set-revision-history-limit
      match:
        any:
          - resources:
              kinds: [Deployment, StatefulSet, DaemonSet]
      mutate:
        targets:
          - apiVersion: apps/v1
            kind: Deployment
          - apiVersion: apps/v1
            kind: StatefulSet
          - apiVersion: apps/v1
            kind: DaemonSet
        patchStrategicMerge:
          spec:
            revisionHistoryLimit: 3
